<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="11">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:id="@+id/SaveTime"
            android:text="@string/savetime"
            android:textSize="20sp"
            android:textColor="#07a"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:id="@+id/RaceMode"
            android:text="@string/mode"
            android:textSize="20sp"
            android:textColor="#07a"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/tpname"
            android:id="@+id/RacePB"
            android:textSize="20sp"
            android:textColor="#07a"/>
    </LinearLayout>
</LinearLayout>