<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeamRace1">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/TheTop"
        app:layout_constraintGuide_percent="0.01"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SecondTop"
        app:layout_constraintGuide_percent="0.13"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ThirdTop"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ForthTop"
        app:layout_constraintGuide_percent="0.28"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/FifthTop"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SixthTop"
        app:layout_constraintGuide_percent="0.85"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SeventhTop"
        app:layout_constraintGuide_percent="0.87"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/EighthTop"
        app:layout_constraintGuide_percent="0.97"/>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/TheLeft"
        app:layout_constraintGuide_percent="0.02"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SecondLeft"
        app:layout_constraintGuide_percent="0.18"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ThirdLeft"
        app:layout_constraintGuide_percent="0.36"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ForthLeft"
        app:layout_constraintGuide_percent="0.64"/>
    <!--
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/FifthLeft"
        app:layout_constraintGuide_percent="0.8"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SixthLeft"
        app:layout_constraintGuide_percent="0.95"/>
        -->

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ClsNum"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/TheTop"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"
        app:layout_constraintLeft_toLeftOf="@+id/TheLeft"
        app:layout_constraintRight_toRightOf="@+id/SecondLeft"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/teamrace"
        app:layout_constraintTop_toTopOf="@+id/TheTop"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/ThirdLeft"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/chooseteam"
        app:layout_constraintTop_toTopOf="@+id/ThirdTop"
        app:layout_constraintBottom_toBottomOf="@+id/ForthTop"
        app:layout_constraintLeft_toLeftOf="@+id/ThirdLeft"
        app:layout_constraintRight_toRightOf="@+id/ForthLeft"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@+id/FifthTop"
        app:layout_constraintBottom_toBottomOf="@+id/SixthTop"
        app:layout_constraintLeft_toLeftOf="@+id/ThirdLeft"
        app:layout_constraintRight_toRightOf="@+id/ForthLeft">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/chooseTeam"
            android:weightSum="4">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/teamA"
                android:id="@+id/A"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/teamB"
                android:id="@+id/B"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/teamC"
                android:id="@+id/C"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/teamD"
                android:id="@+id/D"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/checkteam"/>


    </FrameLayout>
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/startrace"
        android:text="@string/startrace"
        app:layout_constraintTop_toTopOf="@+id/SeventhTop"
        app:layout_constraintBottom_toBottomOf="@+id/EighthTop"
        app:layout_constraintLeft_toLeftOf="@+id/ThirdLeft"
        app:layout_constraintRight_toRightOf="@+id/ForthLeft"
        app:autoSizeTextType="uniform"/>




</androidx.constraintlayout.widget.ConstraintLayout>