<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/first_page_bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/nameTop"
        app:layout_constraintBottom_toBottomOf="@+id/nameBottom"
        app:layout_constraintLeft_toLeftOf="@+id/nameleft"
        app:layout_constraintRight_toRightOf="@+id/nameright">
        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/signup"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            android:gravity="center|bottom"
            android:paddingBottom="15dp"
            android:background="@drawable/first_page_button"
            app:autoSizePresetSizes="@array/autosize_text_sizes"/>
        <Button
            android:id="@+id/signin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/signin"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            android:gravity="center|bottom"
            android:paddingBottom="15dp"
            android:background="@drawable/first_page_button"
            app:autoSizePresetSizes="@array/autosize_text_sizes"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/setting"
            android:text="@string/setting"
            android:layout_weight="1"
            app:autoSizeTextType="uniform"
            android:gravity="center"
            android:visibility="gone"
            android:background="@drawable/first_page_button"
            app:autoSizePresetSizes="@array/autosize_text_sizes"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>