<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup_bg"
    tools:context=".Signin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TheTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SecondTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ThirdTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ForthTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/FifthTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/TheLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SecondLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ThirdLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/school"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"
        app:layout_constraintLeft_toLeftOf="@+id/TheLeft"
        app:layout_constraintRight_toRightOf="@+id/SecondLeft"
        app:layout_constraintTop_toTopOf="@+id/TheTop" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/studenid"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/ThirdTop"
        app:layout_constraintLeft_toLeftOf="@+id/TheLeft"
        app:layout_constraintRight_toRightOf="@+id/SecondLeft"
        app:layout_constraintTop_toTopOf="@+id/SecondTop" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/ClAss"
        android:visibility="invisible"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/ForthTop"
        app:layout_constraintLeft_toLeftOf="@+id/TheLeft"
        app:layout_constraintRight_toRightOf="@+id/SecondLeft"
        app:layout_constraintTop_toTopOf="@+id/ThirdTop" />

    <EditText
        android:id="@+id/school"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="學校代碼"
        android:inputType="number"
        android:maxLength="6"
        android:singleLine="true"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/ThirdLeft"
        app:layout_constraintTop_toTopOf="@+id/TheTop" />

    <EditText
        android:id="@+id/studentid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:inputType="number"
        android:singleLine="true"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/ThirdTop"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/ThirdLeft"
        app:layout_constraintTop_toTopOf="@+id/SecondTop"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/Clnum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:hint="X年X班"
        android:singleLine="true"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ForthTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/ThirdLeft"
        app:layout_constraintTop_toTopOf="@+id/ThirdTop" />

    <Button
        android:id="@+id/check"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/blue_button"
        android:text="@string/in"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="@+id/FifthTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/ThirdLeft"
        app:layout_constraintTop_toTopOf="@+id/ForthTop" />


</androidx.constraintlayout.widget.ConstraintLayout>