<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/classmain_bg"
    tools:context=".ClassMain">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/TheTop"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SecondTop"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ThirdTop"
        app:layout_constraintGuide_percent="0.20"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/FourthTop"
        app:layout_constraintGuide_percent="0.80"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/FifthTop"
        app:layout_constraintGuide_percent="0.85"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SixthTop"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/TheLeft"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/Second_1Left"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SecondLeft"
        app:layout_constraintGuide_percent="0.6"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ThirdLeft"
        app:layout_constraintGuide_percent="0.85"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ForthLeft"
        app:layout_constraintGuide_percent="0.98"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/ClsNum"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/normalbutton"
        app:layout_constraintLeft_toLeftOf="@+id/TheLeft"
        app:layout_constraintRight_toRightOf="@+id/Second_1Left"
        app:layout_constraintTop_toTopOf="@+id/TheTop"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"/>
    <!--Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/setting"
        android:text="@string/setting"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@+id/ThirdLeft"
        app:layout_constraintRight_toRightOf="@id/ForthLeft"
        app:layout_constraintTop_toTopOf="@+id/TheTop"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"/-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@id/ThirdLeft"
        app:layout_constraintTop_toTopOf="@+id/ThirdTop"
        app:layout_constraintBottom_toBottomOf="@+id/FourthTop"
        android:orientation="vertical">
        <Button
            android:layout_width="fill_parent"
            android:endColor="#000000"
            android:background="@drawable/clm_btn1"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/teamrace"
            android:id="@+id/Racemode"
            android:paddingBottom="5dp"
            android:gravity="center|bottom"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"/>

        <Button
            android:layout_width="fill_parent"
            android:endColor="#000000"
            android:background="@drawable/clm_btn2"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/homework"
            android:id="@+id/Homework"
            android:paddingBottom="5dp"
            android:gravity="center|bottom"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"/>
        <Button
            android:layout_width="fill_parent"
            android:background="@drawable/clm_btn3"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record"
            android:id="@+id/Record"
            android:gravity="center|bottom"
            android:paddingBottom="5dp"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            app:autoSizeTextType="uniform"/>

    </LinearLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/signout"
        android:background="@drawable/blue_button"
        android:text="@string/signout"
        android:visibility="gone"
        app:autoSizeTextType="uniform"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:layout_constraintLeft_toLeftOf="@+id/ThirdLeft"
        app:layout_constraintRight_toRightOf="@id/ForthLeft"
        app:layout_constraintTop_toTopOf="@+id/FourthTop"
        app:layout_constraintBottom_toBottomOf="@+id/FifthTop"/>




</androidx.constraintlayout.widget.ConstraintLayout>