<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Record1"
    android:background="@drawable/background" >

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/TheTop"
        app:layout_constraintGuide_percent="0.06"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SecondTop"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ThirdTop"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ForthTop"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/FifthTop"
        app:layout_constraintGuide_percent="0.80"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SixthTop"
        app:layout_constraintGuide_percent="0.8"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/SeventhTop"
        app:layout_constraintGuide_percent="0.93"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/TheLeft"
        app:layout_constraintGuide_percent="0.07"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SecondLeft"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ThirdLeft"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ForthLeft"
        app:layout_constraintGuide_percent="0.4"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/FifthLeft"
        app:layout_constraintGuide_percent="0.6"/>
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/SixthLeft"
        app:layout_constraintGuide_percent="0.85"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ClsNum"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@+id/TheTop"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"
        app:layout_constraintLeft_toLeftOf="@+id/TheLeft"
        app:layout_constraintRight_toRightOf="@+id/SecondLeft"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/record"
        app:layout_constraintTop_toTopOf="@+id/TheTop"
        app:layout_constraintBottom_toBottomOf="@+id/SecondTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/ThirdLeft"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:weightSum="8"
        app:layout_constraintTop_toTopOf="@+id/ThirdTop"
        app:layout_constraintBottom_toBottomOf="@+id/ForthTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/SixthLeft">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/savetime"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            android:layout_weight="3" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/mode"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            android:layout_weight="2" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/tpname"
            android:gravity="center"
            app:autoSizeTextType="uniform"
            app:autoSizePresetSizes="@array/autosize_text_sizes"
            android:layout_weight="3" />
    </LinearLayout>

    <ListView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/RecordList"
        app:layout_constraintTop_toTopOf="@+id/ForthTop"
        app:layout_constraintBottom_toBottomOf="@+id/FifthTop"
        app:layout_constraintLeft_toLeftOf="@+id/SecondLeft"
        app:layout_constraintRight_toRightOf="@+id/SixthLeft"
        android:visibility="visible"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:background="@drawable/btn_me_back_unpress"
        app:autoSizeTextType="uniform"
        app:autoSizePresetSizes="@array/autosize_text_sizes"
        app:layout_constraintTop_toTopOf="@+id/SixthTop"
        app:layout_constraintBottom_toBottomOf="@+id/SeventhTop"
        app:layout_constraintLeft_toLeftOf="@+id/ForthLeft"
        app:layout_constraintRight_toRightOf="@+id/FifthLeft"/>



</androidx.constraintlayout.widget.ConstraintLayout>